objects/FSLABB_AssociatedServiceReport__c.object
<CustomObject>
    <fields>
        <fullName>FSLABB_Link__c</fullName>
        <formula>HYPERLINK((&apos;/1SR?rlid=ServiceReportRelatedList&amp;id=&apos;+ IF(ISBLANK(FSLABB_ServiceAppointment__c), FSLABB_WorkOrderLineItem__r.Id,FSLABB_ServiceAppointment__r.Id )), &apos;click here to service report related list &apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_ServiceAppointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Associated Service Report</relationshipLabel>
        <relationshipName>Associated_Service_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLABB_ServiceReportId__c</fullName>
        <label>service reportId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkOrderLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Associated Service Report</relationshipLabel>
        <relationshipName>Associated_Service_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Associated Service Report</relationshipLabel>
        <relationshipName>Associated_Service_Report</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Associated Service Report</label>
    <nameField>
        <label>Service Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associated Service Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>